finished product data for the strapping product, also started with the stretch film product

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -207,13 +207,13 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Hand Stretch Wrap</a></li>
-                  <li><a href="#" mdbWavesEffect>Machine Stretch Wrap</a></li>
-                  <li><a href="#" mdbWavesEffect>Opaque Stretch Wrap</a></li>
-                  <li><a href="#" mdbWavesEffect>Stretch Wrap Dispenser</a></li>
-                  <li><a href="#" mdbWavesEffect>Stretch Wrap Machinery</a></li>
-                  <li><a href="#" mdbWavesEffect>Shrink Wrap Roll</a></li>
-                  <li><a href="#" mdbWavesEffect>Shrink Wrap System</a></li>
+                  <li routerLink="hand-stretch-wrap"><a mdbWavesEffect>Hand Stretch Wrap</a></li>
+                  <li routerLink="machine-stretch-wrap"><a mdbWavesEffect>Machine Stretch Wrap</a></li>
+                  <li routerLink="opaque-stretch-wrap"><a mdbWavesEffect>Opaque Stretch Wrap</a></li>
+                  <li routerLink="shrink-wrap-roll"><a mdbWavesEffect>Stretch Wrap Dispenser</a></li>
+                  <li routerLink="shrink-wrap-system"><a mdbWavesEffect>Stretch Wrap Machinery</a></li>
+                  <li routerLink="stretch-wrap-dispenser"><a mdbWavesEffect>Shrink Wrap Roll</a></li>
+                  <li routerLink="stretch-wrap-machinery"><a mdbWavesEffect>Shrink Wrap System</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
