--- a/src/app/products/strapping/v-boards/v-boards.component.html
+++ b/src/app/products/strapping/v-boards/v-boards.component.html
@@ -1,3 +1,145 @@
-<p>
-  v-boards works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/Vboard.jpg"
+            alt="V-Boards"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img src="../../../../assets/img/Vboard.jpg" alt="V-Boards" />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">V-BOARDS</h3>
+          <p class="card-text lead">
+            Provides superior corner and edge protection that’s built to the
+            industry’s highest standard of quality.
+          </p>
+          <p class="card-text lead">
+            Protects the edges of the pallet against accidental damage during
+            the shipping process and during storage.
+          </p>
+          <p class="card-text lead">
+            VBoard stabilizes and contains loads, distributes load weight
+            evenly, and easily combines with strapped or stretch wrapped loads
+            to provide maximum protection.
+          </p>
+          <p class="card-text lead">
+            Provides increased support for double stacking pallets during the
+            shipping and storing process.
+          </p>
+          <p class="card-text lead">
+            Widely used to protect furniture.
+          </p>
+          <p class="card-text lead">
+            <strong>Customized V-Boards available: </strong> Most of our
+            customers use customized V-Boards.
+          </p>
+        </div>
+      </div>
+
+      <!--TABLE-->
+      <table class="table mb-5 table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col" mdbTooltip="Product Number" placement="left">
+              PRODUCT #
+            </th>
+            <th scope="col">
+              DESCRIPTION
+            </th>
+            <th scope="col">
+              THICKNESS
+            </th>
+            <th scope="col">
+              SIZE
+            </th>
+            <th
+              scope="col"
+            >
+              LENGTH
+            </th>
+            <th
+              scope="col"
+              mdbTooltip="Number Per Pallet"
+              placement="left"
+            >
+              NO./PALLET
+            </th>
+            <th scope="col" mdbTooltip="Tooltip on left" placement="left">
+              ADD TO CART
+            </th>
+          </tr>
+        </thead>
+        <tr
+          *ngFor="let vboard of vBoard"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ vboard.productNumber }}</td>
+          <td class="item align-middle">{{ vboard.description }}</td>
+          <td class="item align-middle">{{ vboard.thickness }}</td>
+          <td class="item align-middle">{{ vboard.size }}</td>
+          <td class="item align-middle">{{ vboard.length }}</td>
+          <td class="item align-middle">{{ vboard.numberPerPallet }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              placeholder="qty"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
